Got month to display correctly

--- a/AstroCal/calendar.kv
+++ b/AstroCal/calendar.kv
@@ -1,7 +1,11 @@
 <CalGrid>:
-	rows: 7
+	rows: 8
 	padding: 10
 	spacing: 10
+	BoxLayout:
+		Label:
+			id: month_label
+			font_size: 40
 	BoxLayout:
 		Label:
 			text: 'Su'
@@ -27,138 +31,96 @@
 	BoxLayout:
 		spacing: 10
 		Button:
-			text: '1'
-			id: 1
+			id: b1
 		Button:
-			text: '1'
-			id: 2
+			id: b2
 		Button:
-			text: '1'
-			id: 3
+			id: b3
 		Button:
-			text: '1'
-			id: 4
+			id: b4
 		Button:
-			text: '1'
-			id: 5
+			id: b5
 		Button:
-			text: '1'
-			id: 6
+			id: b6
 		Button:
-			text: '1'
-			id: 7
+			id: b7
 	BoxLayout:
 		spacing: 10
 		Button:
-			text: '1'
-			id: 8
+			id: b8
 		Button:
-			text: '1'
-			id: 9
+			id: b9
 		Button:
-			text: '1'
-			id: 10
+			id: b10
 		Button:
-			text: '1'
-			id: 11
+			id: b11
 		Button:
-			text: '1'
-			id: 12
+			id: b12
 		Button:
-			text: '1'
-			id: 13
+			id: b13
 		Button:
-			text: '1'
-			id: 14
+			id: b14
 	BoxLayout:
 		spacing: 10
 		Button:
-			text: '1'
-			id: 15
+			id: b15
 		Button:
-			text: '1'
-			id: 16
+			id: b16
 		Button:
-			text: '1'
-			id: 17
+			id: b17
 		Button:
-			text: '1'
-			id: 18
+			id: b18
 		Button:
-			text: '1'
-			id: 19
+			id: b19
 		Button:
-			text: '1'
-			id: 20
+			id: b20
 		Button:
-			text: '1'
-			id: 21
+			id: b21
 	BoxLayout:
 		spacing: 10
 		Button:
-			text: '1'
-			id: 22
+			id: b22
 		Button:
-			text: '1'
-			id: 23
+			id: b23
 		Button:
-			text: '1'
-			id: 24
+			id: b24
 		Button:
-			text: '1'
-			id: 25
+			id: b25
 		Button:
-			text: '1'
-			id: 26
+			id: b26
 		Button:
-			text: '1'
-			id: 27
+			id: b27
 		Button:
-			text: '1'
-			id: 28
+			id: b28
 	BoxLayout:
 		spacing: 10
 		Button:
-			text: '1'
-			id: 29
+			id: b29
 		Button:
-			text: '1'
-			id: 30
+			id: b30
 		Button:
-			text: '1'
-			id: 31
+			id: b31
 		Button:
-			text: '1'
-			id: 32
+			id: b32
 		Button:
-			text: '1'
-			id: 33
+			id: b33
 		Button:
-			text: '1'
-			id: 34
+			id: b34
 		Button:
-			text: '1'
-			id: 35
+			id: b35
 	BoxLayout:
 		spacing: 10
 		Button:
-			text: '1'
-			id: 36
+			id: b36
 		Button:
-			text: '1'
-			id: 37
+			id: b37
 		Button:
-			text: '1'
-			id: 38
+			id: b38
 		Button:
-			text: '1'
-			id: 39
+			id: b39
 		Button:
-			text: '1'
-			id: 40
+			id: b40
 		Button:
-			text: '1'
-			id: 41
+			id: b41
 		Button:
-			text: '1'
-			id: 42
+			id: b42
