--- a/AstroCal/calendar.kv
+++ b/AstroCal/calendar.kv
@@ -3,8 +3,14 @@
 	padding: 10
 	spacing: 10
 	BoxLayout:
+		Button:
+			text: '<'
+			font_size: 40
 		Label:
 			id: month_label
+			font_size: 40
+		Button:
+			text: '>'
 			font_size: 40
 	BoxLayout:
 		Label:
