--- a/AstroCal/calendar.kv
+++ b/AstroCal/calendar.kv
@@ -1,3 +1,14 @@
+<DayMode>:
+	Label: 
+    	id: l1
+	Label: 
+    	id: sr1
+	Label: 
+    	id: ss1
+	Label: 
+    	id: mr1
+	Label: 
+    	id: ms1 
 <CalGrid>:
 	rows: 8
 	padding: 10
@@ -9,9 +20,13 @@
 		Label:
 			id: month_label
 			font_size: 40
+		Label:
+			text: 'Location'
 		Button:
 			text: '>'
 			font_size: 40
+		Button:
+		    text: 'View'
 	BoxLayout:
 		Label:
 			text: 'Su'
@@ -38,95 +53,137 @@
 		spacing: 10
 		Button:
 			id: b1
+			on_press: app.showDayMode()
 		Button:
 			id: b2
+			on_press: app.showDayMode()
 		Button:
 			id: b3
+			on_press: app.showDayMode()
 		Button:
 			id: b4
+			on_press: app.showDayMode()
 		Button:
 			id: b5
+			on_press: app.showDayMode()
 		Button:
 			id: b6
+			on_press: app.showDayMode()
 		Button:
 			id: b7
+			on_press: app.showDayMode()
 	BoxLayout:
 		spacing: 10
 		Button:
 			id: b8
+			on_press: app.showDayMode()
 		Button:
 			id: b9
+			on_press: app.showDayMode()
 		Button:
 			id: b10
+			on_press: app.showDayMode()
 		Button:
 			id: b11
+			on_press: app.showDayMode()
 		Button:
 			id: b12
+			on_press: app.showDayMode()
 		Button:
 			id: b13
+			on_press: app.showDayMode()
 		Button:
 			id: b14
+			on_press: app.showDayMode()
 	BoxLayout:
 		spacing: 10
 		Button:
 			id: b15
+			on_press: app.showDayMode()
 		Button:
 			id: b16
+			on_press: app.showDayMode()
 		Button:
 			id: b17
+			on_press: app.showDayMode()
 		Button:
 			id: b18
+			on_press: app.showDayMode()
 		Button:
 			id: b19
+			on_press: app.showDayMode()
 		Button:
 			id: b20
+			on_press: app.showDayMode()
 		Button:
 			id: b21
+			on_press: app.showDayMode()
 	BoxLayout:
 		spacing: 10
 		Button:
 			id: b22
+			on_press: app.showDayMode()
 		Button:
 			id: b23
+			on_press: app.showDayMode()
 		Button:
 			id: b24
+			on_press: app.showDayMode()
 		Button:
 			id: b25
+			on_press: app.showDayMode()
 		Button:
 			id: b26
+			on_press: app.showDayMode()
 		Button:
 			id: b27
+			on_press: app.showDayMode()
 		Button:
 			id: b28
+			on_press: app.showDayMode()
 	BoxLayout:
 		spacing: 10
 		Button:
 			id: b29
+			on_press: app.showDayMode()
 		Button:
 			id: b30
+			on_press: app.showDayMode()
 		Button:
 			id: b31
+			on_press: app.showDayMode()
 		Button:
 			id: b32
+			on_press: app.showDayMode()
 		Button:
 			id: b33
+			on_press: app.showDayMode()
 		Button:
 			id: b34
+			on_press: app.showDayMode()
 		Button:
 			id: b35
+			on_press: app.showDayMode()
 	BoxLayout:
 		spacing: 10
 		Button:
 			id: b36
+			on_press: app.showDayMode()
 		Button:
 			id: b37
+			on_press: app.showDayMode()
 		Button:
 			id: b38
+			on_press: app.showDayMode()
 		Button:
 			id: b39
+			on_press: app.showDayMode()
 		Button:
 			id: b40
+			on_press: app.showDayMode()
 		Button:
 			id: b41
+			on_press: app.showDayMode()
 		Button:
 			id: b42
+			on_press: app.showDayMode()
